adicionando cominho ao GitHub e scrypt

--- a/src/main/resources/view/main.fxml
+++ b/src/main/resources/view/main.fxml
@@ -58,7 +58,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#goToGithub" text="About" />
             </items>
           </Menu>
         </menus>
