--- a/src/main/resources/view/validator.fxml
+++ b/src/main/resources/view/validator.fxml
@@ -121,7 +121,7 @@
             <menus>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" onAction="#goToGithub" text="About" />
                     </items>
                 </Menu>
             </menus>
