--- a/src/main/resources/view/createUser.fxml
+++ b/src/main/resources/view/createUser.fxml
@@ -5,108 +5,77 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateUser">
+<BorderPane style="-fx-background-color: #221d21;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateUser">
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" style="-fx-background-color: #221d21;" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="25.0" prefWidth="200.0">
+            <HBox alignment="TOP_LEFT">
                <children>
-                  <Button mnemonicParsing="false" onAction="#goToMain" text="Return to menu" />
+                  <Button onAction="#goToMain" style="-fx-background-color: transparent; -fx-text-fill: #b7aea5; -fx-font-size: 13px; -fx-underline: true; -fx-cursor: hand;" text="‹ Voltar ao Menu" />
                </children>
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
                <padding>
-                  <Insets left="5.0" />
+                  <Insets left="15.0" top="15.0" />
                </padding>
             </HBox>
-            <Label text="Create your user">
-               <VBox.margin>
-                  <Insets top="50.0" />
-               </VBox.margin>
+            <Label style="-fx-text-fill: #f77014" text="Create your user">
                <font>
                   <Font name="Segoe UI" size="40.0" />
-               </font></Label>
-            <HBox layoutX="10.0" layoutY="228.0" prefHeight="17.0" prefWidth="200.0">
-               <children>
-                  <Label text="Name" />
-               </children>
-               <padding>
-                  <Insets left="140.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="55.0" />
-               </VBox.margin>
-            </HBox>
-            <TextField fx:id="fieldName" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" promptText="Enter your name" />
-            <HBox prefHeight="17.0" prefWidth="200.0">
-               <children>
-                  <Label text="CPF" />
-               </children>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets left="140.0" />
-               </padding>
-            </HBox>
-            <TextField fx:id="fieldCpf" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" promptText="Enter your CPF">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></TextField>
-            <HBox prefHeight="17.0" prefWidth="500.0">
-               <children>
-                  <Label text="Password" />
-               </children>
-               <padding>
-                  <Insets left="140.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin></HBox>
-            <PasswordField fx:id="fieldPassword1" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" promptText="Enter your password" />
-            <HBox prefHeight="17.0" prefWidth="200.0">
-               <children>
-                  <Label text="Repeat password" />
-               </children>
-               <padding>
-                  <Insets left="140.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </HBox>
-            <PasswordField fx:id="fieldPassword2" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" promptText="Repeat your password" />
-            <Button mnemonicParsing="false" onAction="#create" text="Create">
+               </font>
                <VBox.margin>
                   <Insets top="15.0" />
-               </VBox.margin></Button>
-            <HBox alignment="CENTER" prefHeight="42.0" prefWidth="500.0">
+               </VBox.margin>
+            </Label>
+            <VBox alignment="CENTER" spacing="8.0">
                <children>
-                  <Label text="Already have an account?">
-                     <HBox.margin>
-                        <Insets right="8.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Tahoma" size="12.0" />
-                     </font></Label>
-                  <Button mnemonicParsing="false" onAction="#goToLogin" text="Login" />
+                  <Label style="-fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold;" text="Name" />
+                  <TextField fx:id="fieldName" maxWidth="280.0" prefWidth="280.0" promptText="Enter your name" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-prompt-text-fill: #b7aea5; -fx-background-radius: 8px; -fx-padding: 10px;" />
                </children>
                <VBox.margin>
-                  <Insets top="60.0" />
+                  <Insets top="40.0" />
+               </VBox.margin>
+            </VBox>
+            <VBox alignment="CENTER" spacing="8.0">
+               <children>
+                  <Label style="-fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold;" text="CPF" />
+                  <TextField fx:id="fieldCpf" maxWidth="280.0" prefWidth="280.0" promptText="Enter your CPF" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-prompt-text-fill: #b7aea5; -fx-background-radius: 8px; -fx-padding: 10px;" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </VBox>
+            <VBox alignment="CENTER" spacing="8.0">
+               <children>
+                  <Label style="-fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold;" text="Password" />
+                  <PasswordField fx:id="fieldPassword1" maxWidth="280.0" prefWidth="280.0" promptText="Enter your password" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-prompt-text-fill: #b7aea5; -fx-background-radius: 8px; -fx-padding: 10px;" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </VBox>
+            <VBox alignment="CENTER" spacing="8.0">
+               <children>
+                  <Label style="-fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold;" text="Repeat password" />
+                  <PasswordField fx:id="fieldPassword2" maxWidth="280.0" prefWidth="280.0" promptText="Repeat your password" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-prompt-text-fill: #b7aea5; -fx-background-radius: 8px; -fx-padding: 10px;" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </VBox>
+            <Button onAction="#create" style="-fx-background-color: linear-gradient(to right, #f77014, #e33c08); -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-background-radius: 8px; -fx-padding: 12px 30px; -fx-cursor: hand;" text="Create">
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
+            </Button>
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Label style="-fx-text-fill: #b7aea5; -fx-font-size: 13px;" text="Already have an account?" />
+                  <Button onAction="#goToLogin" style="-fx-background-color: transparent; -fx-text-fill: #f77014; -fx-font-size: 13px; -fx-underline: true; -fx-cursor: hand;" text="Login" />
+               </children>
+               <VBox.margin>
+                  <Insets top="30.0" />
                </VBox.margin>
             </HBox>
-         </children></VBox>
+         </children>
+      </VBox>
    </center>
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#goToGithub" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
 </BorderPane>
