--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -5,89 +5,71 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
-    <center>
-        <VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+<BorderPane style="-fx-background-color: #221d21;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
+   <center>
+      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="25.0" prefWidth="200.0">
+            <HBox alignment="TOP_LEFT">
                <children>
-                  <Button mnemonicParsing="false" onAction="#goToMain" text="Return to menu" />
+                  <Button onAction="#goToMain" style="-fx-background-color: transparent; -fx-text-fill: #b7aea5; -fx-font-size: 13px; -fx-underline: true; -fx-cursor: hand;" text="‹ Voltar ao Menu" />
                </children>
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
                <padding>
-                  <Insets left="5.0" />
+                  <Insets left="15.0" top="15.0" />
                </padding>
             </HBox>
-            <Label text="Login in your account">
-               <VBox.margin>
-                  <Insets top="80.0" />
-               </VBox.margin>
+            <Label text="Login in your account" textFill="#f77014">
                <font>
                   <Font name="Segoe UI" size="40.0" />
-               </font></Label>
-            <HBox prefHeight="17.0" prefWidth="200.0">
-               <children>
-                  <Label text="CPF">
-                     <font>
-                        <Font name="Tahoma" size="12.0" />
-                     </font>
-                  </Label>
-               </children>
+               </font>
                <VBox.margin>
-                  <Insets top="80.0" />
+                  <Insets top="60.0" />
                </VBox.margin>
-               <padding>
-                  <Insets left="140.0" />
-               </padding>
-            </HBox>
-            <TextField fx:id="fieldCpf" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" promptText="Enter your CPF" />
-            <HBox maxHeight="17.0" minHeight="17.0" prefHeight="17.0" prefWidth="500.0">
+            </Label>
+            <VBox alignment="CENTER_LEFT" maxWidth="280.0" spacing="5.0">
                <children>
-                  <Label text="Password">
+                  <Label text="CPF" textFill="#b7aea5">
                      <font>
-                        <Font name="Tahoma" size="12.0" />
+                        <Font name="Tahoma" size="14.0" />
                      </font>
                   </Label>
+                  <TextField fx:id="fieldCpf" promptText="Enter your CPF" style="-fx-background-color: #433d3d; -fx-text-fill: white; -fx-prompt-text-fill: #b7aea5; -fx-background-radius: 8px; -fx-padding: 10px;" />
                </children>
-               <padding>
-                  <Insets left="140.0" />
-               </padding>
                <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin></HBox>
-            <PasswordField fx:id="fieldPassword" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" promptText="Enter your password" />
-            <Button mnemonicParsing="false" onAction="#login" text="Login">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin></Button>
-            <HBox alignment="CENTER" prefHeight="46.0" prefWidth="500.0">
+                  <Insets top="60.0" />
+               </VBox.margin>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" maxWidth="280.0" spacing="5.0">
                <children>
-                  <Label text="New?">
-                     <HBox.margin>
-                        <Insets right="5.0" />
-                     </HBox.margin>
+                  <Label text="Password" textFill="#b7aea5">
                      <font>
-                        <Font name="Tahoma" size="12.0" />
-                     </font></Label>
-                  <Button mnemonicParsing="false" onAction="#goToCreate" text="Create" />
+                        <Font name="Tahoma" size="14.0" />
+                     </font>
+                  </Label>
+                  <PasswordField fx:id="fieldPassword" promptText="Enter your password" style="-fx-background-color: #433d3d; -fx-text-fill: white; -fx-prompt-text-fill: #b7aea5; -fx-background-radius: 8px; -fx-padding: 10px;" />
+               </children>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </VBox>
+            <Button onAction="#login" style="-fx-background-color: linear-gradient(to right, #f77014, #e33c08); -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-background-radius: 8px; -fx-padding: 12px 30px; -fx-cursor: hand;" text="Login">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </Button>
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Label text="New?" textFill="#b7aea5">
+                     <font>
+                        <Font name="Tahoma" size="13.0" />
+                     </font>
+                  </Label>
+                  <Button onAction="#goToCreate" style="-fx-background-color: transparent; -fx-text-fill: #f77014; -fx-font-size: 13px; -fx-underline: true; -fx-cursor: hand;" text="Create an account" />
                </children>
                <VBox.margin>
                   <Insets top="80.0" />
                </VBox.margin>
             </HBox>
-         </children></VBox>
-    </center>
-    <top>
-        <MenuBar BorderPane.alignment="CENTER">
-            <menus>
-                <Menu mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToGithub" text="About" />
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
-    </top>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
