--- a/src/main/resources/view/sign.fxml
+++ b/src/main/resources/view/sign.fxml
@@ -5,72 +5,47 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Sign">
+<BorderPane style="-fx-background-color: #221d21;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Sign">
     <center>
-        <VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="25.0" prefWidth="200.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#goToMain" text="Return to menu" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="130.0" top="5.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
-            </HBox>
-            <Label text="Select the file to sign">
-               <font>
-                  <Font name="Segoe UI" size="40.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="50.0" />
-               </VBox.margin></Label>
-            <Button fx:id="buttonFile" mnemonicParsing="false" onAction="#importFile" prefHeight="30.0" prefWidth="75.0" text="Select here">
-               <VBox.margin>
-                  <Insets bottom="15.0" />
-               </VBox.margin></Button>
-            <Label fx:id="labelStatus" text="Status: no file selected">
-               <font>
-                  <Font name="Tahoma" size="15.0" />
-               </font></Label>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#clear" prefHeight="35.0" prefWidth="81.0" text="Clear">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#sign" prefHeight="35.0" prefWidth="81.0" text="To sign">
-                     <HBox.margin>
-                        <Insets left="50.0" right="50.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#exportFile" prefHeight="35.0" prefWidth="81.0" text="Export file">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
-               </children>
-               <VBox.margin>
-                  <Insets top="100.0" />
-               </VBox.margin>
-            </HBox>
-         </children></VBox>
+        <VBox alignment="TOP_CENTER" spacing="15.0" style="-fx-background-color: #221d21;" BorderPane.alignment="CENTER">
+            <children>
+                <HBox alignment="TOP_LEFT">
+                    <children>
+                        <Button onAction="#goToMain" style="-fx-background-color: transparent; -fx-text-fill: #b7aea5; -fx-font-size: 13px; -fx-underline: true; -fx-cursor: hand;" text="‹ Voltar ao Menu" />
+                    </children>
+                    <padding>
+                        <Insets left="15.0" top="15.0" />
+                    </padding>
+                </HBox>
+                <Label style="-fx-text-fill: #b7aea5;" text="Select the file to sign">
+                    <font>
+                        <Font name="Segoe UI" size="40.0" />
+                    </font>
+                    <VBox.margin>
+                        <Insets top="80.0" />
+                    </VBox.margin>
+                </Label>
+                <Button fx:id="buttonFile" onAction="#importFile" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold; -fx-background-radius: 8px; -fx-cursor: hand;" text="Select File">
+                    <VBox.margin>
+                        <Insets top="30.0" />
+                    </VBox.margin>
+                </Button>
+                <Label fx:id="labelStatus" text="Status: no file selected" style="-fx-text-fill: #b7aea5;">
+                    <font>
+                        <Font name="Tahoma" size="15.0" />
+                    </font>
+                </Label>
+                <HBox alignment="CENTER" spacing="15.0">
+                    <children>
+                        <Button onAction="#clear" prefHeight="38.0" prefWidth="100.0" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold; -fx-background-radius: 8px; -fx-cursor: hand;" text="Clear" />
+                        <Button onAction="#sign" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: linear-gradient(to right, #f77014, #e33c08); -fx-text-fill: white; -fx-font-size: 14px; -fx-font-weight: bold; -fx-background-radius: 8px; -fx-cursor: hand;" text="Sign" />
+                        <Button onAction="#exportFile" prefHeight="38.0" prefWidth="100.0" style="-fx-background-color: #433d3d; -fx-text-fill: #b7aea5; -fx-font-size: 14px; -fx-font-weight: bold; -fx-background-radius: 8px; -fx-cursor: hand;" text="Export" />
+                    </children>
+                    <VBox.margin>
+                        <Insets top="100.0" />
+                    </VBox.margin>
+                </HBox>
+            </children>
+        </VBox>
     </center>
-    <top>
-        <MenuBar BorderPane.alignment="CENTER">
-            <menus>
-                <Menu mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToGithub" text="About" />
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
-    </top>
 </BorderPane>
