style(main.fxml): change background color and font color of Menuitem About

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -2,9 +2,6 @@
     -fx-background-color: #433d3d;
 }
 
-.menu-bar .label {
+.menu-item .label {
     -fx-text-fill: white;
-    -fx-font-weight: bold;
 }
-
-
